# BookMyVenue

./: .gitignore  Makefile  README.md  SETUP.md  alembic.ini  compose.prod.yml  compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 4b75ce71c23a_first.py
app/: database.py  main.py  models.py
app/db/: session.py
app/models/: __init__.py  user.py  venue.py
app/routers/: users.py  venue.py
app/schemas/: user.py  venue.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/core/: celerybeat-schedule
backend/docker/: ensure-service-databases.sh  entrypoint.sh  init-databases.sh
backend/scripts/: seed_users.py
backend_archive/: .gitignore  docker-entrypoint.sh  pyproject.toml
backend_archive/alembic/: env.py
backend_archive/alembic/versions/: d22e2ee095db_initial.py
backend_archive/app/api/routes/: users.py
backend_archive/app/core/: security.py
backend_archive/app/models/: user.py  venue.py
backend_archive/scripts/seed/: seed_venue_images.py  seed_venue_slots.py  seed_venues.py
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.jsx  README.md  index.css  main.jsx
services/auth-service/: alembic.ini
services/reviews-rating-service/: .env.example  Dockerfile  requirements.txt
services/venue-service/: .env.example  Dockerfile  requirements.txt
(+266 files in other folders)
